# pi-top-Firmware-Updater

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Jenkinsfile  MANIFEST.in  README.md  README.rst  setup.cfg
.github/workflows/: codeql.yml  test-and-build-on-all-commits.yml
debian/: changelog  control  copyright  pt-firmware-updater.install  pt-firmware-updater.lintian-overrides  pt-firmware-updater.postinst  pt-firmware-updater.service  pt-firmware-updater.timer  pt-firmware-updater.triggers  py3dist-overrides  rules
debian/extra/: 99-pt-fw-update-check
pkg/: pwdptfu.sh
pt-i2cdetect/: build.sh
pt-i2cdetect/src/: pt-i2cdetect.c
pt_fw_updater/: __main__.py  check.py  update.py  utils.py  version.py
pt_fw_updater/core/: crc.py  firmware_file_object.py  firmware_updater.py  frame_creator.py  notification_manager.py  packet_manager.py
scripts/: pt-firmware-updater  pt-firmware-upgrade
src/: FrameCreator.py  FwUpdater  HubCommunicator.py  PacketCreator.py  PacketType.py  PiManager.py  hub_communicator.py  packet_creator.py  pt-firmware-updater  pt-fw-updater
src/lib/: file_supervisor.py  firmware_device.py  firmware_device_manager.py  firmware_file_object.py  firmware_updater.py  hub_communicator.py  notification_manager.py  packet_creator.py  packet_manager.py  pt_firmware_checker.py  pt_firmware_updater.py
src/lib/core/: crc.py  firmware_file_object.py  firmware_updater.py  frame_creator.py  notification_manager.py  packet_manager.py
src/tests/: requirements.txt  test_firware_updater.py
tests/: test_firware_updater.py  utils.py
