[metadata]
name = pt-firmware-updater
version = 4.0.0
description = pi-top Firmware Updater
long_description = file: README.rst
long_description_content_type = text/x-rst
author = pi-top (CEED Ltd)
author_email = os-dev@pi-top.com
url = https://github.com/pi-top/pi-top-Firmware-Updater
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9, <4
install_requires =
    # Package will always update in-step with SDK
    # So avoid version-locking
    pitop
    click>=7.1.2,<7.2
    click-logging>=1.0.1,<1.1
    pyinotify>=0.9.6,<0.10

[options.entry_points]
console_scripts =
    pt-firmware-checker = pt_fw_updater.__main__:do_check
    pt-firmware-updater = pt_fw_updater.__main__:do_update

[bdist_wheel]
universal = 1

[flake8]
per-file-ignores =
    __init__.py: F401
    test_*: E402
# https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
extend-ignore = E203
max-line-length = 150

[isort]
profile = black

[pep8]
max-line-length = 150
